--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   "devDependencies": {
     "@types/node": "^14.6.4",
     "@types/react": "^16.9.49",
+    "@typescript-eslint/eslint-plugin": "^4.1.0",
+    "@typescript-eslint/parser": "^4.1.0",
+    "eslint": "^7.8.1",
+    "eslint-plugin-react": "^7.20.6",
     "git-commit-msg-linter": "^2.6.0",
     "typescript": "^4.0.2"
   }
