--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint src"
   },
   "dependencies": {
     "next": "9.5.3",
@@ -19,6 +20,7 @@
     "@typescript-eslint/parser": "^4.1.0",
     "eslint": "^7.8.1",
     "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.1.0",
     "git-commit-msg-linter": "^2.6.0",
     "typescript": "^4.0.2"
   }
