--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "git-commit-msg-linter": "^2.6.0",
     "husky": "^4.3.0",
     "jest": "^26.4.2",
+    "jest-styled-components": "^7.0.3",
     "lint-staged": "^10.3.0",
     "prettier": "^2.1.1",
     "typescript": "^4.0.2"
