--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint src --max-warnings=0",
+    "lint": "eslint src --max-warnings=50 --fix",
     "test": "jest",
-    "test:watch": "yarn test --watch"
+    "test:watch": "yarn test --watch",
+    "storybook": "start-storybook -s ./public -p 6006",
+    "build-storybook": "build-storybook"
   },
   "husky": {
     "hooks": {
@@ -17,7 +19,7 @@
   },
   "lint-staged": {
     "src/**/*": [
-      "yarn lint --fix",
+      "yarn lint",
       "yarn test --findRelatedTests --bail"
     ]
   },
@@ -28,7 +30,10 @@
     "styled-components": "5.1.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.6",
     "@babel/preset-typescript": "^7.10.4",
+    "@storybook/addon-essentials": "^6.0.21",
+    "@storybook/react": "^6.0.21",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.0.2",
     "@types/jest": "^26.0.13",
@@ -37,6 +42,7 @@
     "@types/styled-components": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^4.1.0",
     "@typescript-eslint/parser": "^4.1.0",
+    "babel-loader": "^8.1.0",
     "babel-plugin-styled-components": "^1.11.1",
     "eslint": "^7.8.1",
     "eslint-config-prettier": "^6.11.0",
@@ -49,6 +55,7 @@
     "jest-styled-components": "^7.0.3",
     "lint-staged": "^10.3.0",
     "prettier": "^2.1.1",
+    "react-is": "^16.13.1",
     "typescript": "^4.0.2"
   }
 }
